Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,24 +1,22 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5633104948:AAGU4d00iCCSCmdh4WMN2CP6RqkxpnSNMQs"                              # Require restart after changing it while bot running
+OWNER_ID = "1281749717"                               # Require restart after changing it while bot running
+TELEGRAM_API = "8802706"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "97546900397a98f481bfb8252b1ac4f4"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "0AHDGEiPb7RpRUk9PVA"
+IS_TEAM_DRIVE = "true"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
-IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+IGNORE_PENDING_REQUESTS = "true"
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "https://mirror.thihazaw.workers.dev/0:"
+STATUS_LIMIT = "4"
+STOP_DUPLICATE = "true"
 CMD_PERFIX = ""                              # Require restart after changing it while bot running
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
@@ -49,7 +47,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "true"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
