--- a/config.env
+++ b/config.env
@@ -1,20 +1,20 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5633104948:AAGU4d00iCCSCmdh4WMN2CP6RqkxpnSNMQs"                              # Require restart after changing it while bot running
-OWNER_ID = "1281749717"                               # Require restart after changing it while bot running
-TELEGRAM_API = "8802706"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "97546900397a98f481bfb8252b1ac4f4"                          # Require restart after changing it while bot running
+BOT_TOKEN = "5814442312:AAEPqiTsy_TpjEqisYwFoM1pWI2vjDCfDVg"                              # Require restart after changing it while bot running
+OWNER_ID = "803207672"                               # Require restart after changing it while bot running
+TELEGRAM_API = "5368841"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "fd4f6610e3048a947cf3bd4d3c1a3833"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = "0AHDGEiPb7RpRUk9PVA"
+GDRIVE_ID = "1wltrdHm3JDso8v7SAvAiVjSeHed5p_xR"
 IS_TEAM_DRIVE = "true"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = "mongodb+srv://directlink:fucker83@cluster0.htcoqwu.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-843045502"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = "true"
 USE_SERVICE_ACCOUNTS = "true"
-INDEX_URL = "https://mirror.thihazaw.workers.dev/0:"
+INDEX_URL = "https://vikkicloud.cloudview.workers.dev/0:/"
 STATUS_LIMIT = "4"
 STOP_DUPLICATE = "true"
 CMD_PERFIX = ""                              # Require restart after changing it while bot running
